--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 .logo{
     height: 30px;
 }
+
+.contenidoSeccion{
+    border: 0;
+    color: black;
+  
+}
+.reloj,fecha{
+    font-size: 20 px;
+}
+.moneda{
+   
+    padding: 0;
+    margin: 0;
+}
