Pagina detalle de noticia, finalizada. Falta hacerla responsive

--- a/src/components/principal/style/category.css
+++ b/src/components/principal/style/category.css
@@ -25,6 +25,13 @@
   margin-bottom: 10px;
 }
 
+a:hover{text-decoration:none;
+color: black;} 
+a{text-decoration:none;
+  color: black;
+}
+
+
 @media (max-width: 980px) {
   .cardNew-card {
     width: auto;
