--- a/src/components/administracion/noticias/style/noticias.css
+++ b/src/components/administracion/noticias/style/noticias.css
@@ -2,3 +2,15 @@
     background-color: #002682 !important;
     border: none;
 }
+
+.destacar{
+    color: #ff9506;
+}
+
+.editar{
+    color: #2c49cc;
+}
+
+.eliminar{
+    color: #d00006;
+}
