--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,82 @@
+@import url('https://allfont.es/allfont.css?fonts=futura-normal');
+
+
 .logo{
     height: 30px;
 }
+body{
+  font-family: 'Futura';
+}
+
+.rojo{
+background-image: linear-gradient(15deg, #7F000D 0%, #D00006 100%);
+}
+
+.azul {
+background-image: linear-gradient(0deg, #000752 0%, #002682 100%);
+}
+
+.amarillo{
+background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
+}
+
+.placeicon{
+   font-family: fontawesome;
+   background-position: right;
+
+}
+#icon{
+  
+  
+}
+.subnav .subnavbtn {
+    font-size: 12px;  
+    outline: none;
+    color: white;
+     margin: 0;
+     position: absolute;
+     
+  }
+ 
+  .subnav-content {  
+    font-size: 12px; 
+    color: white;
+    left: 0;
+    background-color:#EC5B09;
+    width: 100%;
+    z-index: 1;
+    background-position-y: 0vmax;
+    display: inline-block;
+    position: absolute; 
+    justify-content:center;  
+  }
+  
+  .search input[type="text"]{
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;}
+  
+   .subnav  a:hover{
+    background-color:#EC5B09;  
+
+  }
+  .subnav-content ul:hover  {
+    text-decoration: none;
+    list-style: none; 
+    color:white;  
+  }
+  
+  .subnav-content ul { 
+    list-style: none;
+    color:white;
+    line-height: 2px;
+    width: 12px;
+    
+  }
+  .subnav-content li a{ 
+    list-style: none;
+    color:white; 
+   
+  }
+  
+  
