--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,12 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
     color:white; 
    
   }
-  .bg-transparente{
-    background-color: rgb(255,255,255); opacity: 0.5;
+  .fixed-bg{
+    /* position: fixed; */
+    /* background: url("/public/bglogin.jpg"); */
+    z-index: -1 !important;
+    background-position: center center !important;;
+    background-attachment: fixed !important;;
+    background-size: cover !important;;
+    width: 100% !important;;
   }
