--- a/src/App.css
+++ b/src/App.css
@@ -33,21 +33,20 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
     outline: none;
     color: white;
      margin: 0;
-     position: absolute;
+     position: absolute;  
      
   }
  
   .subnav-content {  
-    font-size: 12px; 
+    font-size: 14px; 
     color: white;
-    left: 0;
+    left:0;
     background-color:#EC5B09;
     width: 100%;
     z-index: 1;
-    background-position-y: 0vmax;
-    display: inline-block;
+    display:inline-block;
     position: absolute; 
-    justify-content:center;  
+    
   }
   
  
@@ -66,12 +65,18 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
     list-style: none;
     color:white;
     line-height: 2px;
-    width: 12px;
+    
+    display:inline-block;
+
+    
     
   }
   .subnav-content li a{ 
     list-style: none;
     color:white; 
+    display: block;
+    position: relative;
+    align-items: center;
    
   }
   
