corregidas rutas de imagen footer y header

--- a/src/components/principal/style/destacadas.css
+++ b/src/components/principal/style/destacadas.css
@@ -7,6 +7,10 @@
   font-weight: bold;
 }
 
+.texto-sm {
+  font-size: medium;
+}
+
 .shade {
   background-color: rgba(27, 26, 26, 0.336);
   border-radius: 4px;
@@ -19,7 +23,7 @@
     font-size: x-small;
   }
   .texto-sm {
-    font-size: x-small;
+    font-size: small;
   }
 }
 
