--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,6 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
     background-size: cover !important;;
     width: 100% !important;;
   }
+.btn.ms{
+  background: transparent;
+}
