--- a/src/components/principal/style/publicidad.css
+++ b/src/components/principal/style/publicidad.css
@@ -16,3 +16,21 @@ aside {
     font-family: Futura;
     src: local("Futura Std");
   }
+
+  
+.efectoimg:hover{
+    transition: 150ms;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    filter: opacity(.9)
+}
+
+
+.media {
+    background-color: #b8b3b3;
+    
+  }
+  
+  .media img {
+    width: 200px;
+  }
