--- a/src/components/principal/style/destacadas.css
+++ b/src/components/principal/style/destacadas.css
@@ -1,3 +1,6 @@
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.05); }
+
 .texto {
   text-shadow: 3px 3px 10px black;
   padding-bottom: 5px;
