se corrigieron links de pagina de administracion

--- a/src/components/administracion/style/admin.css
+++ b/src/components/administracion/style/admin.css
@@ -19,9 +19,9 @@
 }
 
 .button {
-    font-size: 12px;
+    font-size: large;
     line-height: 50px;
     text-align: center;
-    width: 100px;
+    width: 30% !important;
     height: 50px;
   }
