--- a/src/App.css
+++ b/src/App.css
@@ -26,27 +26,26 @@ background-image: linear-gradient(0deg, #000752 0%, #002682 100%);
 .amarillo{
 background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
 }
-
-.subnav .subnavbtn {
+ .subnav .subnavbtn {
     font-size: 12px;  
     outline: none;
     color: white;
      margin: 0;
      position: absolute;  
      
-  }
+  } 
  
   .subnav-content {  
     font-size: 14px; 
     color: white;
     left:0;
-    background-color:#EC5B09;
+    background-color:#EC5B09; 
     width: 100%;
-    z-index: 1;
+    z-index: 1; 
     display:inline-block;
     position: absolute; 
     
-  }
+  } 
   
  
   
@@ -63,7 +62,7 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
   .subnav-content ul { 
     list-style: none;
     color:white;
-    line-height: 2px;
+    /* line-height: 2px; */
     
     display:inline-block;
 
