--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ background-image: linear-gradient(0deg, #000752 0%, #002682 100%);
 .amarillo{
 background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
 }
- .subnav .subnavbtn {
+ .subnavbtn {
     font-size: 12px;  
     outline: none;
     color: white;
@@ -38,8 +38,7 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
   .subnav-content {  
     font-size: 14px; 
     color: white;
-    left:0;
-    background-color:#EC5B09; 
+    left:0;   
     width: 100%;
     z-index: 1; 
     display:inline-block;
@@ -50,10 +49,14 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
  
   
    .subnav  a:hover{
-    background-color:#EC5B09;  
+    background-color:#FF9605; 
+    border-radius: 5px;
+    
+    
 
   }
-  .subnav-content ul:hover  {
+  .subnav-content ul:hover  { 
+    background-color:#FF9605;  
     text-decoration: none;
     list-style: none; 
     color:white;  
@@ -82,7 +85,7 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
     /* background: url("/public/bglogin.jpg"); */
     z-index: -1 !important;
     background-position: center center !important;;
-    background-attachment: fixed !important;;
+    
     background-size: cover !important;;
     width: 100% !important;;
     margin-top: -10px;
@@ -90,3 +93,10 @@ background-image: linear-gradient(0deg, #EC5B09 0%, #FF9605 100%);
 .btn.ms{
   background: transparent;
 }
+
+/* .footer{
+  display: block;
+  bottom: 0;
+
+} */
+
