--- a/src/components/login/style/login.css
+++ b/src/components/login/style/login.css
@@ -1,6 +1,16 @@
 .bglogin{
     position: absolute;
-    width: 100%;
     z-index: -1;
-    height: 150%;
+    width: 100%;
+    height: 100%;
+    
+   
+}
+.bgregister{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 140%;
+    
+   
 }
