se agrego estilo a botones de administrar

--- a/src/components/login/style/login.css
+++ b/src/components/login/style/login.css
@@ -1,16 +1,23 @@
 .bglogin{
-    position: absolute;
+    height: 110%;
+    width: 100% ;
+    position: absolute; 
     z-index: -1;
-    width: 100%;
-    height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     
    
 }
 .bgregister{
-    position: absolute;
-    z-index: -1;
-    width: 100%;
+    width:100%;
     height: 140%;
-    
+    position: absolute; 
+    z-index: -1;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;   
    
 }
