--- a/src/components/administracion/style/admin.css
+++ b/src/components/administracion/style/admin.css
@@ -20,8 +20,8 @@
 
 .button {
     font-size: large;
-    line-height: 50px;
+    line-height: 10px;
     text-align: center;
-    width: 30% !important;
+    width: 50% ;
     height: 50px;
   }
